--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -16,5 +15,8 @@
     <title>Shex Cells</title>
   </head>
   <body>
+
+    <script src="js/regulators.js"></script>
+    <script src="js/shexCells.js"></script>
   </body>
 </html>
