--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 
     <script src="js/regulators.js"></script>
     <script src="js/shexCells.js"></script>
+    <script src="js/world.js"></script>
   </body>
 </html>
