Get basic regulator regulation working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
 
+    <script src="js/utils.js"></script>
     <script src="js/regulators.js"></script>
     <script src="js/shexCells.js"></script>
     <script src="js/world.js"></script>
